update refactor test